# Speed_Detection

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: qemu_cortex_m3.overlay
include/: camera_handler.h  data_http_client.h  display.h  rtc.h  sensors.h  validate_plate.h
scripts/: server.py
src/: camera_handler.c  data_http_client.c  display.c  main.c  rtc.c  sensors.c  validate_plate.c
tests/display_test/: CMakeLists.txt  display_test.c  qemu_cortex_m3.overlay  testcase.yaml
tests/validate_plate/: CMakeLists.txt  prj.conf  testcase.yaml  validate_plate_test.c
